--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sweetalert2": "^9.14.0",
     "uuid": "^8.1.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
